[gd_scene load_steps=8 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/White.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://RainIsoMainContents/Scenes/ChapterComplete.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "ChapterCompleteScreen"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.709804 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=4]

[node name="ChapterComplete" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChapterTimer" type="Timer" parent="Control"]
wait_time = 8.0
one_shot = true

[node name="Sprite" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 0.709804 )
position = Vector2( 651.478, 331.384 )
scale = Vector2( 81.4347, 50.173 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/ChapterCompleteScreen = SubResource( 1 )

[node name="Label" type="Label" parent="Control"]
anchor_right = 1.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "Demo Complete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 984.0
margin_top = 649.0
margin_right = 1280.0
margin_bottom = 712.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarChapterComplete" type="Area2D" parent="Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/StarChapterComplete"]
shape = SubResource( 4 )

[connection signal="timeout" from="Control/ChapterTimer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Control/StarChapterComplete" to="." method="_on_StarChapterComplete_body_entered"]
